[gd_scene load_steps=33 format=3 uid="uid://t42qw0jhjwg2"]

[ext_resource type="Texture2D" uid="uid://7cucab51ymhu" path="res://assets/gothicvania patreon collection/demon-Files/PNG/demon-idle.png" id="1_0w435"]
[ext_resource type="Script" path="res://Character/Enemy/demon.gd" id="1_ybxvy"]
[ext_resource type="Texture2D" uid="uid://i100k8ara88t" path="res://assets/gothicvania patreon collection/demon-Files/PNG/demon-attack.png" id="2_f37mp"]
[ext_resource type="Texture2D" uid="uid://bqxyxytegmouc" path="res://assets/gothicvania patreon collection/demon-Files/PNG/demon-attack-no-breath.png" id="3_nd3yu"]
[ext_resource type="AudioStream" uid="uid://bda58nqkstlti" path="res://assets/gothicvania patreon collection/music/sound/attack_monster.wav" id="4_5gr8c"]
[ext_resource type="Script" path="res://Character/CharacterStateMachine.gd" id="5_tcyae"]
[ext_resource type="Script" path="res://Character/Enemy/DemonDamageable.gd" id="5_yunle"]
[ext_resource type="Script" path="res://Character/Enemy/Idle.gd" id="6_15udi"]
[ext_resource type="AudioStream" uid="uid://ctpdk3dhya4f2" path="res://assets/gothicvania patreon collection/music/sound/walk_boss.wav" id="6_nyhsf"]
[ext_resource type="AudioStream" uid="uid://bf123p3jeq481" path="res://assets/gothicvania patreon collection/music/sound/die_boss.wav" id="7_iuql7"]
[ext_resource type="Script" path="res://Character/Enemy/DemonHitState.gd" id="7_lrug2"]
[ext_resource type="Script" path="res://Character/Enemy/DemonAttackState.gd" id="8_ux7bt"]
[ext_resource type="Script" path="res://Character/Enemy/DeadState.gd" id="9_qkstm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6uab"]
size = Vector2(112, 112)

[sub_resource type="Animation" id="Animation_bya2g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_0w435")]
}

[sub_resource type="Animation" id="Animation_ak4s3"]
resource_name = "attack"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_f37mp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_5gr8c")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_wmxdj"]
resource_name = "attack_no_breath"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_nd3yu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("4_5gr8c")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_6rs86"]
resource_name = "die"
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("7_iuql7")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="Animation" id="Animation_lg1ko"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_0w435")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("6_nyhsf")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2f6f"]
_data = {
"RESET": SubResource("Animation_bya2g"),
"attack": SubResource("Animation_ak4s3"),
"attack_no_breath": SubResource("Animation_wmxdj"),
"die": SubResource("Animation_6rs86"),
"idle": SubResource("Animation_lg1ko")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1v8i8"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_obpx4"]
animation = &"attack_no_breath"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vsy8e"]
animation = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_uiitg"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wc2eg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fxrhd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ewn0m"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nuty2"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_q431w"]
states/Start/position = Vector2(158, 100)
states/attack/node = SubResource("AnimationNodeAnimation_1v8i8")
states/attack/position = Vector2(523, 31)
states/attack_no_breath/node = SubResource("AnimationNodeAnimation_obpx4")
states/attack_no_breath/position = Vector2(657, 100)
states/idle/node = SubResource("AnimationNodeAnimation_vsy8e")
states/idle/position = Vector2(368, 100)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_uiitg"), "idle", "attack", SubResource("AnimationNodeStateMachineTransition_wc2eg"), "idle", "attack_no_breath", SubResource("AnimationNodeStateMachineTransition_fxrhd"), "attack", "idle", SubResource("AnimationNodeStateMachineTransition_ewn0m"), "attack_no_breath", "idle", SubResource("AnimationNodeStateMachineTransition_nuty2")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_07jpt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ijpst"]
size = Vector2(548, 334)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8frd"]
size = Vector2(141.5, 120.5)

[node name="Demon" type="CharacterBody2D" node_paths=PackedStringArray("hit_state") groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_ybxvy")
hit_state = NodePath("CharacterStateMachine/Hit")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0w435")
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t6uab")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appears"
libraries = {
"": SubResource("AnimationLibrary_q2f6f")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_q431w")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_07jpt")

[node name="Damageable" type="Node" parent="." node_paths=PackedStringArray("enemy", "health_bar")]
script = ExtResource("5_yunle")
enemy = NodePath("..")
health_bar = NodePath("../ProgressBar")

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("5_tcyae")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Idle")

[node name="Idle" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("6_15udi")
attack_state = NodePath("../Attack")

[node name="Hit" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("7_lrug2")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
return_state = NodePath("../Idle")

[node name="Timer" type="Timer" parent="CharacterStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[node name="Attack" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("idle_state", "could_down_timer", "enemy")]
script = ExtResource("8_ux7bt")
idle_state = NodePath("../Idle")
could_down_timer = NodePath("ColdDownTimer")
enemy = NodePath("../..")

[node name="ColdDownTimer" type="Timer" parent="CharacterStateMachine/Attack"]
wait_time = 0.6

[node name="Dead" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_qkstm")
enemy = NodePath("../..")
can_move = false

[node name="VisibityArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibityArea"]
shape = SubResource("RectangleShape2D_ijpst")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
light_mask = 4
position = Vector2(-32, 16)
shape = SubResource("RectangleShape2D_h8frd")
debug_color = Color(0.996078, 0.223529, 0.196078, 0.419608)

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0.486275, 0.988235, 0, 1)
self_modulate = Color(0.486275, 0.988235, 0, 1)
offset_left = -56.0
offset_top = -64.0
offset_right = 294.0
offset_bottom = -37.0
scale = Vector2(0.3, 0.3)
show_percentage = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="timeout" from="CharacterStateMachine/Hit/Timer" to="CharacterStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="CharacterStateMachine/Attack/ColdDownTimer" to="CharacterStateMachine/Attack" method="_on_cold_down_timer_timeout"]
[connection signal="body_entered" from="VisibityArea" to="." method="_on_visibity_area_body_entered"]
[connection signal="body_exited" from="VisibityArea" to="." method="_on_visibity_area_body_exited"]
[connection signal="body_entered" from="HurtBox" to="CharacterStateMachine/Idle" method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="CharacterStateMachine/Attack" method="_on_hurt_box_body_exited"]
